Fix hand getting cut off

--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ a:hover {
 		position: absolute;
 		top: 170px;
 		right: 0;
-		min-height: 75%;
+		min-height: 100%;
 		overflow: hidden;
 	}
 
